--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -13,18 +13,18 @@
         <title>PortFolio Page</title>
     </head>
     <body>
-        <div class="landing-page">
+        <div id="welcome-section">
             <nav class="top-nav">
                 <div class="header">
                     <div class="logo">
                         <a href="#!" class="brand-logo">Nishat Tasnim</a>
                     </div>
-                    <div class="nav-bar">
+                    <div id="navbar">
                         <ul class="right">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Work</a></li>
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#">Blog</a></li>
+                            <li><a href="#welcome-section">Home</a></li>
+                            <li><a href="#projects">Work</a></li>
+                            <li><a href="#about_me">About</a></li>
+                            <li><a href="#footer">Contact</a></li>
                             <li class="lets-talk">
                                 <a
                                     class="
@@ -55,7 +55,7 @@
                 </div>
                 <div class="intro">
                     <h4 class="white-text">My Name is Nishat.</h4>
-                    <h4 class="white-text">Front End Developer</h4>
+                    <h1 class="white-text">Front End Developer</h1>
 
                     <h5>Freelancer</h5>
                 </div>
@@ -201,10 +201,10 @@
                 </div>
 
                 <!-- Recent Projects -->
-                <div class="recent-projects">
+                <div id="projects">
                     <h4>My Works</h4>
 
-                    <div class="tabnav">
+                    <div class="project-tile">
                         <ul class="tabs">
                             <li class="tab">
                                 <a href="#all">All</a>
@@ -301,8 +301,8 @@
                 </div>
                 <!-- End Of  Recent Projects -->
                 <!-- About Me -->
-                <div class="about_me">
-                    <h4>About Me</h4>
+                <div id="about_me">
+                    <h3 class="center">About Me</h3>
                     <div class="me_section">
                         <div class="row">
                             <div class="col s12">
@@ -502,7 +502,7 @@
         </div>
         <!--.landing-div -->
         <!-- Start of Footer -->
-        <div class="footer">
+        <div id="footer">
             <div class="container">
                 <div class="row">
                     <div class="col s6 socials">
