--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -533,7 +533,7 @@
                                         <a href="#"
                                             ><img
                                                 class="icons"
-                                                src="images/icons/reddit.svg"
+                                                src="images/icons/codePen.svg"
                                         /></a>
                                     </li>
                                     <li>
@@ -547,7 +547,7 @@
                                         <a href="#"
                                             ><img
                                                 class="icons"
-                                                src="images/icons/website.svg"
+                                                src="images/icons/github.svg"
                                         /></a>
                                     </li>
                                     <li>
