meet freecodecamp requirements

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -226,10 +226,14 @@
                     <div class="tab-content">
                         <div id="all" class="row">
                             <div class="col s6">
-                                <img
-                                    src="images/project_thumbnail1.jpg"
-                                    alt=""
-                                />
+                                <a
+                                    href="https://codepen.io/nishatanim/pen/XWRzOGd"
+                                    target="_blank"
+                                    ><img
+                                        src="images/project_thumbnail1.jpg"
+                                        alt=""
+                                /></a>
+
                                 <img
                                     src="images/project_thumbnail2.jpg"
                                     alt=""
@@ -530,7 +534,9 @@
                                         /></a>
                                     </li>
                                     <li>
-                                        <a href="#"
+                                        <a
+                                            href="https://codepen.io/nishatanim"
+                                            target="_blank"
                                             ><img
                                                 class="icons"
                                                 src="images/icons/codePen.svg"
@@ -544,7 +550,10 @@
                                         /></a>
                                     </li>
                                     <li>
-                                        <a href="#"
+                                        <a
+                                            id="profile-link"
+                                            href="https://github.com/nisha-tanim"
+                                            target="_blank"
                                             ><img
                                                 class="icons"
                                                 src="images/icons/github.svg"
