add project caption on hover

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -229,25 +229,53 @@
                                 <a
                                     href="https://codepen.io/nishatanim/pen/XWRzOGd"
                                     target="_blank"
-                                    ><img
+                                >
+                                    <div class="caption">
+                                        <p>Some Caption</p>
+                                    </div>
+                                    <img
                                         src="images/project_thumbnail1.jpg"
                                         alt=""
-                                /></a>
-
-                                <img
-                                    src="images/project_thumbnail2.jpg"
-                                    alt=""
-                                />
+                                    />
+                                </a>
+                                <a
+                                    href="https://codepen.io/nishatanim/pen/XWRzOGd"
+                                    target="_blank"
+                                >
+                                    <div class="caption">
+                                        <p>Some Caption</p>
+                                    </div>
+                                    <img
+                                        src="images/project_thumbnail2.jpg"
+                                        alt=""
+                                    />
+                                </a>
                             </div>
                             <div class="col s6">
-                                <img
-                                    src="images/project_thumbnail3.jpg"
-                                    alt=""
-                                />
-                                <img
-                                    src="images/project_thumbnail4.jpg"
-                                    alt=""
-                                />
+                                <a
+                                    href="https://codepen.io/nishatanim/pen/XWRzOGd"
+                                    target="_blank"
+                                >
+                                    <div class="caption">
+                                        <p>Some Caption</p>
+                                    </div>
+                                    <img
+                                        src="images/project_thumbnail3.jpg"
+                                        alt=""
+                                    />
+                                </a>
+                                <a
+                                    href="https://codepen.io/nishatanim/pen/XWRzOGd"
+                                    target="_blank"
+                                >
+                                    <div class="caption">
+                                        <p>Some Caption</p>
+                                    </div>
+                                    <img
+                                        src="images/project_thumbnail4.jpg"
+                                        alt=""
+                                    />
+                                </a>
                             </div>
                         </div>
                         <div id="html" class="row">
